fix: cargs gap

--- a/styles/components/card.scss
+++ b/styles/components/card.scss
@@ -102,8 +102,8 @@
         flex-direction: column;
         padding: var(--space-xs);
         height: auto;
-        width: calc(36% - var(--space-2xs));
-        margin-left: var(--space-2xs);
+        width: calc(36% - var(--space-3xs));
+        margin-left: var(--space-3xs);
         flex: 0 0 auto;
         background: $white;
         border-radius: rem(8);
