--- a/styles/components/list.scss
+++ b/styles/components/list.scss
@@ -3,7 +3,7 @@
     --list-items-display: none;
     --list-header-padding-top: var(--space-l);
     --list-header-padding-bottom: 0;
-    --gap: #{var(--space-2xs)};
+    --gap: #{var(--space-3xs)};
     padding: var(--space-2xs);
     border-radius: rem(8);
     background: $gray;
